--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,14 @@ dependencies:
   flutter:
     sdk: flutter
   lint: 1.3.0
+  async_redux: ^7.0.1
+  freezed_annotation: ^0.12.0
+  path_provider: ^1.6.27
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  build_runner: any
+  freezed: any
+  json_serializable: any
 
 flutter:
   uses-material-design: true
